# ctrlsys

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE-SLICOT  README.md  meson.build  pyproject.toml  setup.py  spec.md
.agent/rules/: slicot-fortran-c11-translator.md
.agent/workflows/: translate_slicot_routine.md
.claude-plugin/: marketplace.json
.claude/agents/: slicot-fortran-translator.md
.github/workflows/: build.yml  ci.yml  publish.yml  test.yml
benchmarks/: README.md  meson.build  test_descriptor.py  test_generators.py  test_lyapunov.py  test_riccati.py
benchmarks/common/: data_loader.h  timing.h
benchmarks/native/: bench_bb01ad.c  bench_bb02ad.c  bench_bb03ad.c  bench_bb04ad.c  bench_bd01ad.c  bench_bd02ad.c  bench_sb02md.c  bench_sb02od.c  bench_sb03md.c  bench_sb03od.c
docker/: Dockerfile.asan
docs/: conf.py  guide.rst  history.md  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/api/: index.rst
include/: slicot_blas.h  slicot_config.h.in
python/: meson.build  slicot_module.c
python/_package_init/: __init__.py
python/data/: docstrings.h
python/wrappers/: py_ab.c  py_mb02.c  py_mb03.c  py_mb04.c  py_sb.c  py_tb.c  py_tc.c  py_wrappers.h
scripts/: benchmark_c_vs_fortran.py  bump_version.py
shim/: README.md  pyproject.toml
shim/slicot/: __init__.py
skills/control-theory/: SKILL.md
skills/pid-loop-tuning/: SKILL.md
src/AB/: ab01md.c  ab08mz.c  ab08nd.c  ab08nw.c  ab08ny.c  ab08nz.c  ab09id.c  ab09iy.c  ab09jv.c  ab09jw.c  ab13cd.c  ab13dd.c  (+5 more)
tools/: extract_examples.py
(+726 files in other folders)
