[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slicot"
version = "2.0.0"
description = "Transitional package: slicot has been renamed to ctrlsys"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"
dependencies = [
    "ctrlsys>=1.0.18",
]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/jamestjsp/ctrlsys"
